# turestor

./: .gitignore  CMakeLists.txt
cmake_config/: exes.cmake  functions.cmake  modules.cmake  open_mp.cmake  qt5.cmake  source_group_by_dir.cmake
conf/: armadillo.conf  camera.conf  camera_new.conf
exe_src/beam_generator/: CMakeLists.txt
exe_src/cubature/: CMakeLists.txt
exe_src/cubica/: CMakeLists.txt
exe_src/lma_calculation/: CMakeLists.txt
exe_src/mesh_partitioner/: CMakeLists.txt
exe_src/mesh_viewer/: CMakeLists.txt
exe_src/mixed_multi_domain/: CMakeLists.txt
exe_src/msh2tetgen/: CMakeLists.txt
exe_src/multi_domain_basis/: CMakeLists.txt
exe_src/multi_domain_subspace_simulator/: CMakeLists.txt
exe_src/obj_render/: CMakeLists.txt
exe_src/partition_info_generator/: CMakeLists.txt
exe_src/pose_viewer/: CMakeLists.txt
exe_src/position_based_rod/: CMakeLists.txt
exe_src/random_subspace_pose_viewer/: CMakeLists.txt
exe_src/sample_pose/: CMakeLists.txt
exe_src/single_domain_basis/: CMakeLists.txt
exe_src/subspace_pose_sample/: CMakeLists.txt
exe_src/subspace_pose_viewer/: CMakeLists.txt
exe_src/subspace_simulator/: CMakeLists.txt
exe_src/tet_mesh_simulator/: CMakeLists.txt
scripts/: batch_run.py  cmake_gen.sh  delete.sh  global.pro  new_exe.sh  new_module.sh  pull.sh  push.sh  set_all_exe_not_to_run_in_terminal.sh  shell_batch_run.sh  update_cmake_src.sh
scripts/exe_template/: CMakeLists.txt  main.cpp  main.pro
scripts/module_template/: module_template.pri  module_template.pro
shader/: phong.frag  shadow.frag
src/basis_generation/: CMakeLists.txt  basis_generation.pri  basis_generator.cpp  basis_generator.h  double_domain_basis_generator.cpp  double_domain_basis_generator.h  single_domain_basis_generator.cpp  single_domain_basis_generator.h
src/basis_generation/vega_basis_generator/: ARPACKSolver.cpp  StVKHessianTensor.cpp  StVKHessianTensor.h
src/bvh/: CMakeLists.txt
src/cubature_optimization/: CMakeLists.txt  single_domain_cubature.cpp
src/cubature_optimization/cubature_base/: steve.cpp
src/cubica/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/global/: CMakeLists.txt  global.cpp  global.h
src/k_means/: CMakeLists.txt  k_means.cpp
src/lib/: CMakeLists.txt  triangle_mesh_creator.h
src/lma_calculator/: CMakeLists.txt
src/marching_cube/: CMakeLists.txt
src/obj_mtl_renderer/: CMakeLists.txt
src/opengl_util/: CMakeLists.txt  opengl_soft_shadow_render.cpp
src/pbd_rod/: CMakeLists.txt
src/pose/: CMakeLists.txt  tet.cpp  tet.h
src/procedural_beam/: CMakeLists.txt
src/qt_opengl_util/: CMakeLists.txt
src/shape_op/: CMakeLists.txt
src/solver/: CMakeLists.txt
src/subspace/: CMakeLists.txt  multi_domain_tet.cpp  subspace_simulator.cpp  subspace_simulator.h  subspace_tet.cpp  subspace_tet.h
src/tet_mesh_io/: CMakeLists.txt
src/tri_mesh_io/: CMakeLists.txt
src/vega/: CMakeLists.txt  tet_mesh_simulator_bridge.cpp
src/vega_obj_mtl/: CMakeLists.txt
src/volumetric_rod/: CMakeLists.txt
src/window/: CMakeLists.txt  open_gl_qt.cpp
