set(headers
  affine_transformer.h
  biconjugate_gradient_stablized.h
  binary_file_io.h
  blas_wrapper.h
  buffer_manager.h
  config_file.h
  conjugate_gradient_solver.h
  cubic_solver.h
  fixed_matrix.h
  fixed_matrix_utility.h
  fixed_vector.h
  fixed_vector_utility.h
  fps_calculator.h
  macro_constant.h
  matlab_io.h
  MERSENNETWISTER.h
  print_macro.h
  profiler.h
  progress_bar.h
  quaternion.h
  random.h
  singleton.h
  statistics.h
  string_formatter.h
  svd.h
  text_file_io.h
  timer.h
  triangle_mesh_creator.h
  utility_function.h
  vector_io.h
  vector_lib.h
)

set(sources
  affine_transformer.cpp
  biconjugate_gradient_stablized.cpp
  binary_file_io.cpp
  config_file.cpp
  conjugate_gradient_solver.cpp
  profiler.cpp
  progress_bar.cpp
  quaternion.cpp
  string_formatter.cpp
  text_file_io.cpp
  triangle_mesh_creator.cpp
)

ExtractLastPartFromFullPath(${CMAKE_CURRENT_LIST_DIR} dir_name)
add_library(${dir_name} ${headers} ${sources})
