set(headers
  corotationalLinearFEM.h
  corotationalLinearFEMForceModel.h
  eig3.h
  forceModel.h
  generateMassMatrix.h
  homogeneousStVKIsotropicMaterial.h
  isotropicHyperelasticFEM.h
  isotropicMaterial.h
  isotropicMaterialWithCompressionResistance.h
  mat3d.h
  matrixIO.h
  matrixMacros.h
  matrixMultiplyMacros.h
  minivector.h
  multiMatrixIO.h
  polarDecomposition.h
  sparseMatrix.h
  StVKElementABCD.h
  StVKForceModel.h
  StVKInternalForces.h
  StVKIsotropicMaterial.h
  StVKStiffnessMatrix.h
  StVKTetABCD.h
  tet_mesh_simulator_bridge.h
  tetMesh.h
  vec2d.h
  vec3d.h
  volumetricMesh.h
  volumetricMeshENuMaterial.h
  volumetricMeshMooneyRivlinMaterial.h
  volumetricMeshOrthotropicMaterial.h
  volumetricMeshParser.h
)

set(sources
  corotationalLinearFEM.cpp
  corotationalLinearFEMForceModel.cpp
  eig3.cpp
  forceModel.cpp
  generateMassMatrix.cpp
  homogeneousStVKIsotropicMaterial.cpp
  isotropicHyperelasticFEM.cpp
  isotropicMaterial.cpp
  isotropicMaterialWithCompressionResistance.cpp
  mat3d.cpp
  matrixIO.cpp
  multiMatrixIO.cpp
  polarDecomposition.cpp
  sparseMatrix.cpp
  StVKElementABCD.cpp
  StVKForceModel.cpp
  StVKInternalForces.cpp
  StVKIsotropicMaterial.cpp
  StVKStiffnessMatrix.cpp
  StVKTetABCD.cpp
  tet_mesh_simulator_bridge.cpp
  tetMesh.cpp
  vec3d.cpp
  volumetricMesh.cpp
  volumetricMeshENuMaterial.cpp
  volumetricMeshMooneyRivlinMaterial.cpp
  volumetricMeshOrthotropicMaterial.cpp
  volumetricMeshParser.cpp
)

ExtractLastPartFromFullPath(${CMAKE_CURRENT_LIST_DIR} dir_name)
add_library(${dir_name} ${headers} ${sources})
